@@ -57,6 +57,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   optional fields, which may be considered useful at registration time.
 * Fixed Postgres upgrade script.
 * (bug 8613) Fix error when viewing "Recent Changes" and using Postgres.
+* Initialise site_stats table at upgrade time if data was missing
+
 
 == Languages updated ==
 
